--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,4 +1,6 @@
-name: Metrics
+- name: Metrics embed
+  uses: lowlighter/metrics@v3.26
+
 on:
   # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
