--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,5 +1,4 @@
-- name: Metrics embed
-  uses: lowlighter/metrics@v3.26
+name: Metrics embed
 
 on:
   # Schedule daily updates
@@ -15,4 +14,4 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
