--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,7 +19,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           file name: metrics.plugin.achievements.compact.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_achievements: yes
           plugin_achievements_display: compact
@@ -28,13 +28,13 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.base.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
           base: header, activity, repositories
       - name: Recent activity charts
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.habits.charts.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_habits: yes
           plugin_habits_facts: no
@@ -51,7 +51,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.languages.indepth.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_languages: yes
           plugin_languages_indepth: yes
