--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,42 +15,32 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.AK_METRIC_T }}
+      - name: Default metrics
+        uses: lowlighter/metrics@latest
+        with:
+          filename: ak.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: header, activity, community
+      - name: Half-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: ak-base.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: ""
+          plugin_isocalendar: yes
       - name: Compact display
         uses: lowlighter/metrics@latest
         with:
-          file name: metrics.plugin.achievements.compact.svg
+          filename: ak-achievements.svg
           token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_threshold: C
-      - name: Default metrics
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.base.svg
-          token: ${{ secrets.AK_METRIC_T }}
-          base: header, activity, repositories
-      - name: Recent activity charts
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.habits.charts.svg
-          token: ${{ secrets.AK_METRIC_T }}
-          base: ""
-          plugin_habits: yes
-          plugin_habits_facts: no
-          plugin_habits_charts: yes
-          config_timezone: Ameriaca/Denver
-      - name: Half-year calendar
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.isocalendar.svg
-          token: ${{ secrets.AK_METRIC_T }}
-          base: ""
-          plugin_isocalendar: yes
       - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.languages.indepth.svg
+          filename: ak-languages.svg
           token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_languages: yes
@@ -61,7 +51,7 @@ jobs:
       - name: Icons
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.topics.icons.svg
+          filename: ak-topics.svg
           token: NOT_NEEDED
           base: ""
           plugin_topics: yes
