--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,10 +14,6 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.AK_METRIC_T }}
-      - name: Default metrics
-        uses: lowlighter/metrics@latest
-        with:
           filename: ak.svg
           token: ${{ secrets.AK_METRIC_T }}
           base: header, activity, community
@@ -57,3 +53,13 @@ jobs:
           plugin_topics: yes
           plugin_topics_limit: 0
           plugin_topics_mode: icons
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: ak-habits.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: America/Denver
