--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -52,3 +52,13 @@ jobs:
           plugin_topics: yes
           plugin_topics_limit: 0
           plugin_topics_mode: icons
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: ak-habits.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: America/Denver
