test (Actions): update environment name for metrics job

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -10,7 +10,7 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     environment: 
-      name: METRICS_TOKEN
+      name: production
     permissions:
       contents: write
     steps:
