--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,3 +26,12 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
+      - name: Indepth analysis
+        uses: lowlighter/metrics@latest
+        with:
+          filename: indepth.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_indepth: yes
+
