--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,37 +1,64 @@
 name: Metrics
+
 on:
   # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  schedule: [{ cron: "0 0 * * *" }]
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
     permissions:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          filename: github-metrics.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: header, activity, community
+      - name: Half-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: calendar.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: ""
+          plugin_isocalendar: yes
       - name: Compact display
         uses: lowlighter/metrics@latest
         with:
           filename: achievements.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.AK_METRIC_T }}
           base: ""
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_threshold: X
+          plugin_achievements_threshold: C
       - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
-          filename: indepth.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          filename: languages.svg
+          token: ${{ secrets.AK_METRIC_T }}
           base: ""
-          plugin_followup: yes
-          plugin_followup_indepth: yes
-
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size
+          plugin_languages_aliases: javascript:JS
+          plugin_languages_analysis_timeout: 15
+      - name: Icons
+        uses: lowlighter/metrics@latest
+        with:
+          filename: topics.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_topics: yes
+          plugin_topics_limit: 0
+          plugin_topics_mode: icons
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: habits.svg
+          token: ${{ secrets.AK_METRIC_T }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: America/Denver
