--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,35 +17,33 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: github-metrics.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS }}
           base: header, activity, community
-      - name: Half-year calendar
+      - name: Full-year calendar
         uses: lowlighter/metrics@latest
         with:
           filename: calendar.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS }}
           base: ""
           plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
       - name: Compact display
         uses: lowlighter/metrics@latest
         with:
           filename: achievements.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS }}
           base: ""
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: X
       - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
-          filename: languages.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          filename: indepth.svg
+          token: ${{ secrets.METRICS }}
           base: ""
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_details: lines, bytes-size
-          plugin_languages_aliases: javascript:JS
-          plugin_languages_analysis_timeout: 15
+          plugin_followup: yes
+          plugin_followup_indepth: yes
       - name: Icons
         uses: lowlighter/metrics@latest
         with:
@@ -59,9 +57,10 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: habits.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS }}
           base: ""
-          plugin_habits: yes
-          plugin_habits_facts: no
-          plugin_habits_charts: yes
+          plugin_activity: yes
+          plugin_activity_limit: 5
+          plugin_activity_days: 0
+          plugin_activity_filter: issue, pr, release, fork, review, ref/create
           config_timezone: America/Denver
