--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -64,3 +64,11 @@ jobs:
           plugin_activity_days: 0
           plugin_activity_filter: issue, pr, release, fork, review, ref/create
           config_timezone: America/Denver
+      - name: Most used (with details)
+        uses: lowlighter/metrics@latest
+        with:
+          filename: languages.svg
+          token: ${{ secrets.METRICS }}
+          base: ""
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
