--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -64,11 +64,14 @@ jobs:
           plugin_activity_limit: 5
           plugin_activity_days: 0
           plugin_activity_filter: issue, pr, release, fork, review, ref/create
-      - name: Most used (with details)
+      - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
           filename: languages.svg
           token: ${{ secrets.METRICS }}
           base: ""
           plugin_languages: yes
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size
+          plugin_languages_limit: 12
+          plugin_languages_analysis_timeout: 15
