--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,44 +28,111 @@ jobs:
           # Options
           user: adnksharp
           template: classic
-          base: header, activity, community, repositories, metadata
-          base_hireable: yes
-          base_indepth: yes
-          config_display: columns
+          base: header, activity
           config_octicon: yes
+          config_display: columns
           config_timezone: America/Denver
           config_twemoji: yes
+          repositories_forks: yes
+
+      - name: Detailed display
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.achievements.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: X
+
+      - name: Indepth analysis
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.followup.indepth.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_indepth: yes
           plugin_followup_sections: repositories
+
+      - name: Full-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.isocalendar.fullyear.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+
+      - name: Most used (with details)
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.languages.details.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_languages_details: bytes-size, percentage
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
           plugin_languages_details: bytes-size, percentage
-          plugin_languages_limit: 12
+          plugin_languages_limit: 21
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
+          plugin_languages_recent_days: 720
+          plugin_languages_recent_load: 990
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          commits_authoring: adn ksharp, adnksharp, adnksharp@users.noreply.github.com
+
+      - name: Spotify - Random track from playlist
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.music.playlist.spotify.svg
+          token: NOT_NEEDED
+          base: ""
           plugin_music: yes
-          plugin_music_limit: 4
-          plugin_music_mode: playlist
-          plugin_music_playlist: https://open.spotify.com/embed/playlist/37i9dQZF1E39ZeU3vfFNeX?utm_source=generator
-          plugin_music_provider: spotify
-          plugin_music_time_range: medium
-          plugin_music_top_type: tracks
+          plugin_music_playlist: https://open.spotify.com/embed/playlist/37i9dQZF1E39ZeU3vfFNeX
+
+
+      - name: Featured repositories
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.repositories.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_repositories: yes
+          plugin_repositories_featured: adnksharp/CyberGRUB-2077
           plugin_repositories_order: featured, pinned, starred, random
+          plugin_repositories_pinned: 2
+          plugin_repositories_random: 4
+          plugin_repositories_starred: 1
+
+      - name: Recently starred
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.stars.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_stars: yes
           plugin_stars_limit: 4
-          repositories_forks: yes
+
+      - name: Indepth analysis
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.followup.indepth.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_archived: yes
+          plugin_followup_indepth: yes
+      - name: Icons
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.topics.icons.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_topics: yes
+          plugin_topics_limit: 0
+          plugin_topics_mode: icons
